<?xml version="1.0" encoding="utf-8"?>
<resources>
    
  <string name="passcode_manage">Manage passcode</string>
  <string name="passcode_enter_passcode">Enter your passcode</string>
  <string name="passcode_enter_old_passcode">Enter your old passcode</string>
  <string name="passcode_re_enter_passcode">Re-enter your passcode</string>
  <string name="passcode_change_passcode">Change passcode</string>
  <string name="passcode_set">Passcode set</string>
  <string name="passcode_wrong_passcode">Wrong passcode, please try again.</string>
  <string name="passcode_preference_title">Passcode lock</string>
  <string name="passcode_turn_off">Turn passcode off</string>
  <string name="passcode_turn_on">Turn passcode on</string>
  <string name="default_passcode">0</string>
    
    

    <string name="app_name">Expense_Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_more">More</string>
    <string name="action_profile">My Profile</string>
    <string name="action_categories">Categories</string>
    <string name="action_contacts">Contacts</string>
    <string name="title_activity_auth">AuthActivity</string>

</resources>
