<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.nz.app.MainActivity" >

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          app:showAsAction="always"
          android:title="@string/action_search"/>
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          app:showAsAction="always"
          android:title="@string/action_new" />
    <item android:id="@+id/action_more"
          android:icon="@drawable/ic_action_overflow"
          app:showAsAction="always"
          android:title="@string/action_more">
        
        <menu>
            <item android:id="@+id/action_profile"
          app:showAsAction="never"
          android:title="@string/action_profile" />
    
    		<item android:id="@+id/action_categories"
          		app:showAsAction="never"
          		android:title="@string/action_categories" />
    
    		<item android:id="@+id/action_contacts"
          		app:showAsAction="never"
          		android:title="@string/action_contacts" />
          </menu>
    </item>
          
</menu>
